# Snoop_Clone

./: CMakeLists.txt  devicemanager.cpp  devicemanager.h  devicetable.cpp  devicetable.h  devicewidget.cpp  devicewidget.h  ecudevice.cpp  ecudevice.h  goonlinebuttondelegate.cpp  goonlinebuttondelegate.h  mainwindow.cpp  mainwindow.h  mainwindow.ui  newchanneldialog.cpp  newchanneldialog.h  newchanneldialog.ui  newdevicedialog.cpp  newdevicedialog.h  newdevicedialog.ui  vectorinterface.cpp  vectorinterface.h
